// geoemploi - week 1 subset
// the user tables ship with the first migration even though milestone 0 does not
// use them, so adding auth later is a code change and not a schema change.

generator client {
  provider = "prisma-client"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

enum Role {
  SEEKER
  EMPLOYER
  ADMIN
}

enum ContractType {
  CDI
  CDD
  INTERNSHIP
  APPRENTICESHIP
  FREELANCE
}

model User {
  id           String    @id @default(cuid())
  email        String    @unique
  passwordHash String
  role         Role
  createdAt    DateTime  @default(now())
  // 3.3 - account deletion must cascade, wired from day one
  deletedAt    DateTime?

  seekerProfile   SeekerProfile?
  employerProfile EmployerProfile?
}

model SeekerProfile {
  userId       String  @id
  firstName    String
  lastName     String
  headline     String?
  skills       String[]
  availability String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model EmployerProfile {
  userId      String  @id
  companyName String
  siret       String?
  verified    Boolean @default(false)

  user User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  jobs Job[]
}

model Job {
  id           String       @id @default(cuid())
  employerId   String
  title        String
  description  String
  contractType ContractType
  address      String
  city         String
  postalCode   String
  // 3.2 - municipality level precision, plain float columns.
  // bbox query on the viewport, no postgis needed at this scale.
  latitude     Float
  longitude    Float
  radiusKm     Int          @default(0)
  createdAt    DateTime     @default(now())
  // 2.2 - listings older than 30 days are archived. week 2 turns this into a job,
  // the column exists now so it is a one line filter, not a migration.
  archivedAt   DateTime?

  employer EmployerProfile @relation(fields: [employerId], references: [userId], onDelete: Cascade)

  // the map query is always "visible jobs in this bounding box"
  @@index([archivedAt, latitude, longitude])
}
