// geoemploi / chomagego - week 1 schema
// generated by hand from prisma/schema.prisma, kept in sync manually.
// last checked against the running schema: 2026-09-04

Table User {
  id           text      [pk, default: `cuid()`]
  email        text      [not null, unique]
  passwordHash text      [not null]
  role         Role      [not null]
  createdAt    timestamp [not null, default: `now()`]
  deletedAt    timestamp [note: 'account deletion cascades from day one']
}

Table SeekerProfile {
  userId       text     [pk, ref: - User.id]
  firstName    text     [not null]
  lastName     text     [not null]
  headline     text
  skills       "text[]"
  availability text
}

Table EmployerProfile {
  userId      text    [pk, ref: - User.id]
  companyName text    [not null]
  siret       text
  verified    boolean [not null, default: false]
}

Table Job {
  id           text         [pk, default: `cuid()`]
  employerId   text         [not null, ref: > EmployerProfile.userId]
  title        text         [not null]
  description  text         [not null]
  contractType ContractType [not null]
  address      text         [not null]
  city         text         [not null]
  postalCode   text         [not null]
  latitude     float        [not null, note: 'wgs84, municipality-level precision is enough at this scale']
  longitude    float        [not null]
  radiusKm     integer      [not null, default: 0]
  createdAt    timestamp    [not null, default: `now()`]
  archivedAt   timestamp    [note: 'listings older than 30 days get archived here, week 2 turns this into a scheduled job']

  indexes {
    (archivedAt, latitude, longitude) [name: 'job_map_query_idx', note: 'every map/browse query filters on these three columns together']
  }
}

Enum Role {
  SEEKER
  EMPLOYER
  ADMIN
}

Enum ContractType {
  CDI
  CDD
  INTERNSHIP
  APPRENTICESHIP
  FREELANCE
}
